<resources>
    <string name="app_name">JP\'s WorkoutLog</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome to\nJP\'s workout log!</string>
    <string name="new_workout">New Workout!</string>
    <string name="stats">Stats</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="pref_header_general">General</string>

    <string name="pref_unit">Weight unit</string>
    <string-array name="pref_unit_list_names">
        <item>Kilograms</item>
        <item>Pounds</item>
    </string-array>
    <string-array name="pref_unit_list_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string name="cancel">Cancel</string>
    <string name="set_done">Set done!</string>
    <string name="clear">Clear</string>

    <string name="workout_date">Workout date?</string>
    <string name="title_activity_date">Workout Date</string>
    <string name="workout_new_start">Start working out!</string>

    <string name="summary">%1$d Exercise(s), %2$d Set(s), %3$.2f %4$s</string>
    <string name="workout_done">Workout done!</string>
    <string name="new_set">New Set</string>
    <string name="add_set">Add Set:</string>
    <string name="exercise">Exercise</string>


    <string name="set_added">Set of %1$s added!</string>

    <string name="last_set">Last Set: %1$s * %2$d (%3$.2f %4$s)</string>
    <string name="remove_last_set">Remove</string>

    <string name="reps">Reps</string>
    <string name="weight">Weight</string>
    <string name="max_weight">Top Weight</string>
    <string name="title_activity_workout">Workout</string>

    <string-array name="default_exercises">
        <item>Bench Press</item>
        <item>Deadlift</item>
        <item>Romanian Deadlift</item>
        <item>Squat</item>
        <item>Front Squat</item>
        <item>Goblet Squat</item>
        <item>Lat Pulldown</item>
        <item>Face Pull</item>
        <item>Pull-up</item>
        <item>Wide Pull-up</item>
        <item>Biceps Curl</item>
        <item>Curl-up</item>
        <item>Press-up</item>
        <item>Crunch</item>
        <item>Leg Curl</item>
        <item>Leg Extension</item>
        <item>Leg Press</item>
        <item>Calf raise</item>
        <item>Chest Press</item>
        <item>Dips</item>
        <item>Triceps Extension</item>
        <item>Skull Crusher</item>
        <item>Muscle-up</item>
        <item>Lunge</item>
        <item>Burpee</item>
        <item>Shoulder Press</item>
    </string-array>

    <string name="error_reps">Reps should be a round number; bigger than 0!</string>
    <string name="error_weight">Weight should be a number!</string>

    <string name="title_activity_stats">Stats</string>

    <string name="global_stats_last">Last workout: %1$s</string>
    <string name="global_stats_none">No workout done! Get going!</string>
    <string name="global_stats_avg">%1$d workout(s) since %2$s (%3$.1g workouts/week)</string>

    <string name="workout_stats">Workout stats</string>

    <string name="exercise_stats">Exercise stats</string>

    <string name="stat">Statistic</string>
    <string name="min">Minimum</string>
    <string name="max">Maximum</string>
    <string name="exercises">Exercises</string>
    <string name="sets">Sets</string>
    <string name="set">Set</string>
    <string name="date">Date</string>
    <string name="all_workouts">All</string>

    <string name="file_prefix">JPWorkoutLog</string>
    <string name="file_save">Save to file</string>
    <string name="file_saved">Saved to file %1$s</string>

    <string name="file_save_all">Save all to file</string>

    <string name="past">Past workouts</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="past_date">Date: %1$s</string>
    <string name="title_activity_past">Past Workouts</string>
    <string name="past_set">%1$s * %2$d (%3$.2f %4$s)</string>
    <string name="no_past_set">No sets!</string>
</resources>
